2004-10-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* bonobo/bonobo-control.c (bonobo_control_set_transient_for): See
	if there is already a GdkWindow wrapper registered for the x11_id,
	reuse it if it exists, otherwise request new one.  Fixes #151378.

2004-10-02  Jesus Bravo Alvarez  <suso@trasno.net>

	* configure.in: Added gl (Galician) to ALL_LINGUAS.

2004-09-29 Matthias Clasen <mclasen@redhat.com>

	Merged from the gnome-2-8 branch by Federico Mena Quintero <federico@ximian.com>:

	* bonobo/bonobo-ui-toolbar-control-item.c: Remove a 
	broken and unneeded finalizer, avoid warnings when
	toolbars are destroyed, and make control toolitems
	non-homogeneous.

2004-09-27  Damien Carbery <damien.carbery@sun.com>

	Fixes #153629

	* tools/browser/bonobo-browser.c: include locale.h.

2004-09-25  Matthias Clasen  <mclasen@redhat.com>

	* bonobo/bonobo-ui-preferences.c (bonobo_ui_preferences_get_toolbar_style): 
	Match the prototype.

2004-09-25  Federico Mena Quintero  <federico@ximian.com>

	* Merged the fixes from the toolbar-rework branch.

2004-09-21  Rodrigo Moya <rodrigo@novell.com>

	* tools/Makefile.am: added new tools directory.

	* tools/browser/*: get the Bonobo component browser from
	bonobo-support module.

	* configure.in:
	* Makefile.am: added new directories to the build.

2004-09-14  Tomasz Kłoczko <kloczek@pld.org.pl>

	* configure.in: remove AC_SUBST() for CFLAGS, CPPFLAGS and LDFLAGS
	  variables (substed by default).

2004-09-13  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.8.0.

2004-09-08  Gora Mohanty  <gmohanty@cvs.gnome.org>
                                                                                
        * configure.in: Added 'or' to ALL_LINGUAS.
  
2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-control.c: (bonobo_control_get_ambient_properties),